fixed image alignment

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -15,13 +15,14 @@
 }
 
 .card-image{
+    display: block;
+    margin: 0 auto;
     height: 30vh;
     width:30vh
 }
 
 .image-card{
-    margin: 0 auto;
-    width:100%;
+    width:150%;
     height: auto;
 }
 
@@ -40,6 +41,10 @@
     top:0px;
     z-index: 10;
     width:250px;
+}
+
+.navbar .nav-link{
+    font-size: 1.25rem;
 }
 
 .navbar-toggler{
@@ -90,6 +95,7 @@
         top:22vh;
         z-index: 10;
         width:250px;
+        
     }
 
     .navbar-toggler-icon{
